--- a/lucterios/contacts/help/02_legal_entity.html
+++ b/lucterios/contacts/help/02_legal_entity.html
@@ -1,4 +1,25 @@
 {% load i18n %}
 <h1>{% trans "02_legal_entity.html" %}</h1>
 
-<center><img src='contacts/help/EditLegalEntity.jpg'/></center>
+{% trans "help-legal_entity_intro" %}
+
+<h2>{% trans "help-legal_entity_list" %}</h2>
+
+{% trans "help-legal_entity_list-detail" %}
+<center><img src='lucterios.contacts/help/ListLegalEntity.jpg'/></center>
+
+<h2>{% trans "help-legal_entity_edit" %}</h2>
+{% trans "help-legal_entity_edit-detail" %}
+<center><img src='lucterios.contacts/help/EditLegalEntity.jpg'/></center>
+
+<h2>{% trans "help-legal_entity_show" %}</h2>
+{% trans "help-legal_entity_show-detail" %}
+<center><img src='lucterios.contacts/help/ShowLegalEntity.jpg'/></center>
+
+<h2>{% trans "help-legal_entity_responsability" %}</h2>
+{% trans "help-legal_entity_responsability-detail" %}
+<center><img src='lucterios.contacts/help/ResponsabilityLegalEntity.jpg'/></center>
+
+<h2>{% trans "help-legal_entity_find" %}</h2>
+{% trans "help-legal_entity_find-detail" %}
+<center><img src='lucterios.contacts/help/FindLegalEntity.jpg'/></center>
