--- a/lucterios/contacts/help/03_configuration.html
+++ b/lucterios/contacts/help/03_configuration.html
@@ -1,2 +1,12 @@
 {% load i18n %}
 <h1>{% trans "03_configuration.html" %}</h1>
+
+{% trans "help-configuration_intro" %}
+
+<h2>{% trans "help-configuration_contact" %}</h2>
+
+{% trans "help-configuration_contact-detail" %}
+
+<h2>{% trans "help-configuration_postalCode" %}</h2>
+
+{% trans "help-configuration_postalCode-detail" %}
