--- a/lucterios/contacts/help/01_individual.html
+++ b/lucterios/contacts/help/01_individual.html
@@ -1,4 +1,21 @@
 {% load i18n %}
 <h1>{% trans "01_individual.html" %}</h1>
 
-<center><img src='contacts/help/EditIndividual.jpg'/></center>
+{% trans "help-individual_intro" %}
+
+<h2>{% trans "help-individual_list" %}</h2>
+
+{% trans "help-individual_list-detail" %}
+<center><img src='lucterios.contacts/help/ListIndividual.jpg'/></center>
+
+<h2>{% trans "help-individual_edit" %}</h2>
+{% trans "help-individual_edit-detail" %}
+<center><img src='lucterios.contacts/help/EditIndividual.jpg'/></center>
+
+<h2>{% trans "help-individual_show" %}</h2>
+{% trans "help-individual_show-detail" %}
+<center><img src='lucterios.contacts/help/ShowIndividual.jpg'/></center>
+
+<h2>{% trans "help-individual_find" %}</h2>
+{% trans "help-individual_find-detail" %}
+<center><img src='lucterios.contacts/help/FindIndividual.jpg'/></center>
