--- a/lucterios/contacts/help/02_legal_entity.html
+++ b/lucterios/contacts/help/02_legal_entity.html
@@ -6,20 +6,20 @@
 <h2>{% trans "help-legal_entity_list" %}</h2>
 
 {% trans "help-legal_entity_list-detail" %}
-<center><img src='lucterios.contacts/help/ListLegalEntity.jpg'/></center>
+<center><img src='lucterios.contacts/help/ListLegalEntity.png'/></center>
 
 <h2>{% trans "help-legal_entity_edit" %}</h2>
 {% trans "help-legal_entity_edit-detail" %}
-<center><img src='lucterios.contacts/help/EditLegalEntity.jpg'/></center>
+<center><img src='lucterios.contacts/help/EditLegalEntity.png'/></center>
 
 <h2>{% trans "help-legal_entity_show" %}</h2>
 {% trans "help-legal_entity_show-detail" %}
-<center><img src='lucterios.contacts/help/ShowLegalEntity.jpg'/></center>
+<center><img src='lucterios.contacts/help/ShowLegalEntity.png'/></center>
 
 <h2>{% trans "help-legal_entity_responsability" %}</h2>
 {% trans "help-legal_entity_responsability-detail" %}
-<center><img src='lucterios.contacts/help/ResponsabilityLegalEntity.jpg'/></center>
+<center><img src='lucterios.contacts/help/ResponsabilityLegalEntity.png'/></center>
 
 <h2>{% trans "help-legal_entity_find" %}</h2>
 {% trans "help-legal_entity_find-detail" %}
-<center><img src='lucterios.contacts/help/FindLegalEntity.jpg'/></center>
+<center><img src='lucterios.contacts/help/FindLegalEntity.png'/></center>
