--- a/lucterios/contacts/help/01_individual.html
+++ b/lucterios/contacts/help/01_individual.html
@@ -6,16 +6,16 @@
 <h2>{% trans "help-individual_list" %}</h2>
 
 {% trans "help-individual_list-detail" %}
-<center><img src='lucterios.contacts/help/ListIndividual.jpg'/></center>
+<center><img src='lucterios.contacts/help/ListIndividual.png'/></center>
 
 <h2>{% trans "help-individual_edit" %}</h2>
 {% trans "help-individual_edit-detail" %}
-<center><img src='lucterios.contacts/help/EditIndividual.jpg'/></center>
+<center><img src='lucterios.contacts/help/EditIndividual.png'/></center>
 
 <h2>{% trans "help-individual_show" %}</h2>
 {% trans "help-individual_show-detail" %}
-<center><img src='lucterios.contacts/help/ShowIndividual.jpg'/></center>
+<center><img src='lucterios.contacts/help/ShowIndividual.png'/></center>
 
 <h2>{% trans "help-individual_find" %}</h2>
 {% trans "help-individual_find-detail" %}
-<center><img src='lucterios.contacts/help/FindIndividual.jpg'/></center>
+<center><img src='lucterios.contacts/help/FindIndividual.png'/></center>
